--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: XT DOC
 description: XT Interface documentation.
-url: https://doc.xt.com
+url: https://xt-com.github.io/xt4-api/
 google_analytics_key:
 permalink: pretty
 baseurl:
