Add user center related documents

--- a/_config.yml
+++ b/_config.yml
@@ -229,6 +229,38 @@ collections:
     language: cn
     position_number: 5
 
+  user_center_documentation:
+    title: Access Description
+    type: user_center
+    language: en
+    position_number: 1
+  user_center_account:
+    title: Account
+    type: user_center
+    language: en
+    position_number: 2
+  user_center_apiKey:
+    title: ApiKey
+    type: user_center
+    language: en
+    position_number: 3
+
+  user_center_documentation_cn:
+    title: 接入说明
+    type: user_center
+    language: cn
+    position_number: 4
+  user_center_account_cn:
+    title: 账户
+    type: user_center
+    language: cn
+    position_number: 5
+  user_center_apikey_cn:
+    title: ApiKey
+    type: user_center
+    language: cn
+    position_number: 6
+
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
@@ -398,6 +430,32 @@ defaults:
       _hide_content: true
   - scope:
       type: "third_party_document"
+    values:
+      _hide_content: true
+
+
+  - scope:
+      type: "user_center_documentation"
+    values:
+      _hide_content: true
+  - scope:
+      type: "user_center_account"
+    values:
+      _hide_content: true
+  - scope:
+      type: "user_center_apiKey"
+    values:
+      _hide_content: true
+  - scope:
+      type: "user_center_documentation_cn"
+    values:
+      _hide_content: true
+  - scope:
+      type: "user_center_account_cn"
+    values:
+      _hide_content: true
+  - scope:
+      type: "user_center_apikey_cn"
     values:
       _hide_content: true
 # -----------
