add futures collection api

--- a/_config.yml
+++ b/_config.yml
@@ -115,21 +115,26 @@ collections:
     type: futures
     language: en
     position_number: 2
+  futures_quote_collection:
+    title: Quote collection
+    type: futures
+    language: en
+    position_number: 3
   futures_order:
     title: Order
     type: futures
     language: en
-    position_number: 3
+    position_number: 4
   futures_entrust:
     title: Entrust
     type: futures
     language: en
-    position_number: 4
+    position_number: 5
   futures_user:
     title: User
     type: futures
     language: en
-    position_number: 5
+    position_number: 6
   # futures_market_websocket:
   #   title: WEBSOCKET
   #   type: futures
@@ -155,21 +160,26 @@ collections:
     type: futures
     language: cn
     position_number: 2
+  futures_quote_collection_cn:
+    title: 行情收录
+    type: futures
+    language: cn
+    position_number: 3
   futures_order_cn:
     title: 限价委托和市价委托
     type: futures
     language: cn
-    position_number: 3
+    position_number: 4
   futures_entrust_cn:
     title: 计划委托与止盈止损
     type: futures
     language: cn
-    position_number: 4
+    position_number: 5
   futures_user_cn:
     title: 用户相关
     type: futures
     language: cn
-    position_number: 5
+    position_number: 6
   # futures_market_websocket_cn:
   #   title: 行情WEBSOCKET
   #   type: futures
