--- a/_config.yml
+++ b/_config.yml
@@ -45,76 +45,86 @@ collections:
     type: spot
     language: en
     position_number: 4
+  etf:
+    title: ETF
+    type: spot
+    language: en
+    position_number: 5
   balance:
     title: Balance
     type: spot
     language: en
-    position_number: 5
+    position_number: 6
   deposit_withdrawal:
     title: Deposit/Withdrawal
     type: spot
     language: en
-    position_number: 6
+    position_number: 7
   transfer:
     title: Transfer
     type: spot
     language: en
-    position_number: 7
+    position_number: 8
   websocket_public:
     title: WEBSOCKET(public)
     type: spot
     language: en
-    position_number: 8
+    position_number: 9
   websocket_private:
     title: WEBSOCKET(private)
     type: spot
     language: en
-    position_number: 9
+    position_number: 10
   documentation_cn:
     title: 接入说明
     type: spot
     language: cn
-    position_number: 10
+    position_number: 11
   market_cn:
     title: 市场数据
     type: spot
     language: cn
-    position_number: 11
+    position_number: 12
   order_cn:
     title: 订单
     type: spot
     language: cn
-    position_number: 12
+    position_number: 13
   trade_cn:
     title: 成交
     type: spot
     language: cn
-    position_number: 13
+    position_number: 14
+  etf_cn:
+    title: ETF
+    type: spot
+    language: cn
+    position_number: 15
   balance_cn:
     title: 资产
     type: spot
     language: cn
-    position_number: 14
+    position_number: 16
   deposit_withdrawal_cn:
     title: 充值/提现
     type: spot
     language: cn
-    position_number: 15
+    position_number: 17
   transfer_cn:
     title: 划转
     type: spot
     language: cn
-    position_number: 16
+    position_number: 18
   websocket_public_cn:
     title: WEBSOCKET(public)
     type: spot
     language: cn
-    position_number: 17
+    position_number: 19
   websocket_private_cn:
     title: WEBSOCKET(private)
     type: spot
     language: cn
-    position_number: 18
+    position_number: 20
 
   futures_documentation:
     title: Access Description
