--- a/_config.yml
+++ b/_config.yml
@@ -50,81 +50,91 @@ collections:
     type: spot
     language: en
     position_number: 5
+  copy_trade:
+    title: Copy trade
+    type: spot
+    language: en
+    position_number: 6
   balance:
     title: Balance
     type: spot
     language: en
-    position_number: 6
+    position_number: 7
   deposit_withdrawal:
     title: Deposit/Withdrawal
     type: spot
     language: en
-    position_number: 7
+    position_number: 8
   transfer:
     title: Transfer
     type: spot
     language: en
-    position_number: 8
+    position_number: 9
   websocket_public:
     title: WEBSOCKET(public)
     type: spot
     language: en
-    position_number: 9
+    position_number: 10
   websocket_private:
     title: WEBSOCKET(private)
     type: spot
     language: en
-    position_number: 10
+    position_number: 11
   documentation_cn:
     title: 接入说明
     type: spot
     language: cn
-    position_number: 11
+    position_number: 12
   market_cn:
     title: 市场数据
     type: spot
     language: cn
-    position_number: 12
+    position_number: 13
   order_cn:
     title: 订单
     type: spot
     language: cn
-    position_number: 13
+    position_number: 14
   trade_cn:
     title: 成交
     type: spot
     language: cn
-    position_number: 14
+    position_number: 15
   etf_cn:
     title: ETF
     type: spot
     language: cn
-    position_number: 15
+    position_number: 16
+  copy_trade_cn:
+    title: 跟单
+    type: spot
+    language: cn
+    position_number: 17
   balance_cn:
     title: 资产
     type: spot
     language: cn
-    position_number: 16
+    position_number: 18
   deposit_withdrawal_cn:
     title: 充值/提现
     type: spot
     language: cn
-    position_number: 17
+    position_number: 19
   transfer_cn:
     title: 划转
     type: spot
     language: cn
-    position_number: 18
+    position_number: 20
   websocket_public_cn:
     title: WEBSOCKET(public)
     type: spot
     language: cn
-    position_number: 19
+    position_number: 21
   websocket_private_cn:
     title: WEBSOCKET(private)
     type: spot
     language: cn
-    position_number: 20
+    position_number: 22
 
   futures_documentation:
     title: Access Description
